package cl.ucn.disc.dsm.pictwin.data.model

/**
 * Data class: Pic
 */
data class Pic(
    val latitude: Double,
    val longitude: Double,
    // val date: Instant,
    val photo: String,
)



