package cl.ucn.disc.dsm.pictwin.data.model

/**
 * Data class: PicTwin.
 */
data class PicTwin(
    val persona: Persona,
    val pic: Pic,
    val twin: Pic,
)


